The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name:
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/01/26 15:15:15 CST
Tag: blume-20040126-toplevel
Description:

Improved handling of exceptions at the interactive toplevel.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2004/01/26 11:25:00
Tag: blume-20040126-app
Description:

Type of top-level "app" corrected.
Added code for setting vp_limitPtrMask to Win32-specific runtime.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/11/18 17:10 CST
Tag: blume-20031118-basis-fiddle
Description:

- changed Timer interface to what might become the spec
- POSIX_FLAGS -> BIT_FLAGS according to spec
- some other minor discrepancies wrt. spec eliminated

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/11/06 12:00:00 CST
Tag: Release_110_44
Description:

New working version (110.44). New bootfiles.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2003/11/04 11:50:00 CST
Tag: blume-20031104-move-libraries
Description:

Eliminated the "dont_move_libraries" directive in config/targets.
(The mechanism was broken and could not be fixed easily.  Moreover,
there does not seem to be any reason not to move all libraries into
lib during installation.  I originally implemented this directive as a
backward-compatibility feature when I first introduced the new CM.
Now that things have been stable for a long time and going back to the