@@ -1,6 +1,12 @@
 BOOT: the location of the latest boot files.
 ----------------------------------------------------------------------
 Name: Matthias Blume
+Date: 2004/02/03 14:50:00 CST
+Tag: Release_110_45
+Version: 110.45
+Location: http://smlnj.cs.uchicago.edu/dist/working/110.45/
+----------------------------------------------------------------------
+Name: Matthias Blume
 Date: 2003/11/06 12:00:00 CST
 Tag: Release_110_44
 Version: 110.44
